syntax = "proto3";

option go_package = "./proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc GetTasks (TaskRequest) returns (TaskResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message TaskRequest {
  // You can include any parameters needed for the request
}

message TaskResponse {
  repeated Task tasks = 1;
}

enum TaskType {
  DEFAUALT_TASK = 0;
  INTERVAL_TASK = 1;
  CRON_TASK = 2;
}

message Task {
  int32 id = 1;
  string organization = 2;
  int32 project_id = 3;
  TaskType type = 4;
  string name = 5;
  int64 interval = 6;
  repeated string cronExpr = 7;
  bool disabled = 8;
}
